# oceancv

./: CMakeLists.txt  Dockerfile  LICENSE.md  README.md
cudaimg/: fspice_normalization.cpp  fspice_normalization.h  gabor_filter.cpp  gabor_filter.h  gauss_smoothing.cpp  gauss_smoothing.h  image_entropy.cpp  image_entropy.h  misc_func.cpp  misc_func.h  zernike_filter.cpp  zernike_filter.h
dep/MPEG7FexLib/: Convert.cpp  Convert.h  Descriptors.h  Feature.cpp  Feature.h  Frame.cpp  Frame.h
dep/MPEG7FexLib/Extraction/: ColorLayoutExtraction.cpp  ColorLayoutExtraction.h  ColorSpaceExtraction.cpp  ColorSpaceExtraction.h  ColorStructureExtraction.cpp  ColorStructureExtraction.h  ContourShapeExtraction.cpp  ContourShapeExtraction.h  DominantColorExtraction.cpp  DominantColorExtraction.h  EdgeHistExtraction.cpp  EdgeHistExtraction.h  EigenFaceData.h  FaceRecognitionExtraction.cpp  FaceRecognitionExtraction.h  GoFGoPColorExtraction.cpp  GoFGoPColorExtraction.h  HomoTextureExtraction.cpp  HomoTextureExtraction.h  RegionShapeExtraction.cpp  RegionShapeExtraction.h  ScalableColorExtraction.cpp  ScalableColorExtraction.h  homo_texture_extractor.cpp  imgutil.c
doc/: Doxyfile  Doxyfile.in  mainpage.md
examples/descriptors/: descriptors.cpp
examples/h2som/: h2som.cpp
examples/laserpoints/: laserpoints.cpp
examples/linearregression/: linearregression.cpp
examples/statistical_descriptors/: statistical_descriptors.cpp
examples/zernike/: zernike.cpp
img/: color_constancy.cpp  color_constancy.h  fspice_normalization.cpp  fspice_normalization.h  image_entropy.cpp  image_entropy.h  pixel_blob.cpp  pixel_blob.h  statistical_filters.cpp  statistical_filters.h
ml/: aggregation.cpp  aggregation.h  cluster_indices.cpp  cluster_indices.h  color_descriptors.cpp  color_descriptors.h  feature_descriptor.cpp  feature_descriptor.h  genetic_algorithm.cpp  genetic_algorithm.h  h2som.cpp  h2som.h  learn_rate.cpp  learn_rate.h  linear_regression.cpp  linear_regression.h  mat_algorithms.cpp  mat_algorithms.h  mat_pair.cpp  mat_pair.h  mat_pair_algorithms.cpp  mat_pair_algorithms.h  metric.cpp  metric.h  mpeg7_descriptors.cpp  mpeg7_descriptors.h  neural_gas.cpp  neural_gas.h  vec_algorithms.cpp  vec_algorithms.h  vec_pair.cpp  vec_pair.h
proc/: fspice.hpp
test/: file_parser.h  file_parser.txt  mat_algorithms_test.h  mat_pair_algorithms_test.h  mat_pair_test.h  metric_test.h  run_test.cpp  vec_algorithms_test.h  vec_pair_test.h
util/: cli_arg_provenance.cpp  cli_arg_provenance.h  cli_args.cpp  cli_args.h  data_file_structure.cpp  data_file_structure.h  file_parser.cpp  file_parser.h  file_system.cpp  file_system.h  geo_coordinates.cpp  geo_coordinates.h  json_value.cpp  json_value.h  load_remote_image.cpp  load_remote_image.h  misc_func.cpp  misc_func.h  progress_bar.cpp  progress_bar.h  string_func.cpp  string_func.h
uwi/: comonod.h  delphi.h  laser.h  olimp.h
